# dobotics

./: .gitignore  README.md  requirements.txt
src/dobotics_main/: package.xml  setup.cfg  setup.py
src/dobotics_main/config/: imshow.yaml  robotis_op3.yaml
src/dobotics_main/config/robot/: robot_config.yaml
src/dobotics_main/config/simulation/: scene_select.yaml  simulation_config.yaml
src/dobotics_main/dobotics_main/: dobotics_pybullet_sim.py  dobotics_webots_sim.py  robotis_op3.py
src/dobotics_main/dobotics_main/modules/: config.py  robotis_op3_driver.py
src/dobotics_main/dobotics_main/submodule/: config.py  dobotics_main_data.py  dobotics_pybullet_robot_app.py  dobotics_pybullet_robot_node.py  dobotics_webots_robotis_op3_driver.py
src/dobotics_main/launch/: dobotics_webots_robotis_op3_scene1_launch.py  dobotics_webots_robotis_op3_scene2_launch.py  imshow.py  robotis_op3_single.py  robotis_op3_single_match.py
src/dobotics_main/resource/: op3_teamA_keeper.urdf  op3_teamA_striker.urdf  op3_teamB_keeper.urdf  op3_teamB_striker.urdf  robotis_op3.urdf  robotis_op3_a.urdf  robotis_op3_c.urdf  robotis_op3_d.urdf  robotis_op3_e.urdf  robotis_op3_f.urdf  robotis_op3_teamA_keeper.urdf  robotis_op3_teamA_striker.urdf  robotis_op3_teamB_keeper.urdf  robotis_op3_teamB_striker.urdf
src/dobotics_main/robot_description/robotis_op3/: CMakeLists.txt  package.xml
src/dobotics_main/robot_description/robotis_op3/urdf/: robotis_op3.urdf
src/dobotics_main/worlds/: robotis_op3_scene1.wbt  robotis_op3_scene2.wbt  robotis_op3_single.wbt  robotis_op3_single_match.wbt
(+54 files in other folders)
